# super-computer

./: .gitignore  .gitmodules  NOTES  README.md  boot.sh  compile.sh  compile_target.sh  cross.sh  generate_deps.sh  generate_image.sh  install.sh
files/: armhf-toolchain.txt
install/: install.sh
install/debs/: bc_1.07.1-2+b1_armhf.deb  cmake-data_3.18.4-2+rpt1+rpi1+deb11u1_all.deb  cmake_3.18.4-2+rpt1+rpi1+deb11u1_armhf.deb  i2c-tools_4.2-1+b1_armhf.deb  libarchive13_3.4.3-2+deb11u1_armhf.deb  libconfig-dev_1.5-0.4_armhf.deb  libconfig-doc_1.5-0.4_all.deb  libconfig9_1.5-0.4_armhf.deb  libexpat1-dev_2.2.10-2+deb11u5_armhf.deb  libexpat1_2.2.10-2+deb11u5_armhf.deb  libfuse-dev_2.9.9-5_armhf.deb  libi2c0_4.2-1+b1_armhf.deb  libjsoncpp24_1.9.4-4_armhf.deb  libltdl-dev_2.4.6-15_armhf.deb  libltdl7_2.4.6-15_armhf.deb  libpcre2-16-0_10.36-2+deb11u1_armhf.deb  libpcre2-32-0_10.36-2+deb11u1_armhf.deb  libpcre2-dev_10.36-2+deb11u1_armhf.deb  libpython3.9-dev_3.9.2-1+rpi1_armhf.deb  librhash0_1.4.1-2_armhf.deb  libselinux1-dev_3.1-3_armhf.deb  libsepol1-dev_3.1-1_armhf.deb  libsigsegv2_2.13-1_armhf.deb  m4_1.4.18-5_armhf.deb  python-pip-whl_20.3.4-4+rpt1+deb11u1_all.deb  python3-build_0.1.0-3_all.deb  python3-pep517_0.9.1-1_all.deb  python3-pip_20.3.4-4+rpt1+deb11u1_all.deb  python3-smbus_4.2-1+b1_armhf.deb  python3-venv_3.9.2-3_armhf.deb  python3.9-dev_3.9.2-1+rpi1_armhf.deb  python3.9-venv_3.9.2-1+rpi1_armhf.deb  (+1 more)
mech/: button.scad
patches/: bcm2709_defconfig.patch
scripts/: boot.sh
sw/: CMakeLists.txt  README.md
systemd/: super-daemon.service
(+5 files in other folders)
